sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
	var chgtfait : Boolean = true
	var debut : Int = 0
	var fin : Int = getNombreValeurs()-2
		for (i<- 0 to getNombreValeurs()-2){
			chgt fait = false
			if(plusPetit(i+1,i)){
				echange(i+1,i)
				chgtfait = true
			}
			fin-=1
		}
		if (chgtfait == false){
			return
		}
		for (i<- getNombreValeurs() -2 to 0 by -1){
			chgtfait = false
			if (plusPetit(i+1,i)){
				echange(i+1,i)
				chgtfait = true	
			}
			debut+=1
		}
		if (chgtfait == false){
			return
		}
	
	}

